Add command args support and help command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
     "files.associations": {
         "ostream": "cpp",
-        "iostream": "cpp",
-        "new": "cpp",
-        "*.tcc": "cpp",
-        "iosfwd": "cpp",
-        "fstream": "cpp",
-        "queue": "cpp",
-        "stack": "cpp"
+        "iostream": "cpp"
     }
 }
